// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`extractHandshakeAccessTokenInput returns bearer input when only bearer is present 1`] = `
{
  "dpopProof": undefined,
  "token": "jwt",
}
`;

exports[`extractHandshakeAccessTokenInput returns dpop input when bearer + dpop header present 1`] = `
{
  "dpopProof": "proof",
  "token": "jwt",
}
`;
